--- a/style.css
+++ b/style.css
@@ -485,10 +485,7 @@ details {
 }
 
 html {
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-    /* Edge 12+, Internet Explorer 11- */
-    overflow-y: scroll;
-    /* All browsers without overlaying scrollbars */
+    /*-ms-overflow-style: -ms-autohiding-scrollbar; *//*overflow-y: scroll; */
     -webkit-text-size-adjust: 100%;
     /* iOS 8+, Windows Phone 8.1+ */
 }
